Postgresql Datasource integrated and code optimization.