@@ -1,7 +1,10 @@
 package com.company.orchestrator.domain.service;
 
+import com.company.orchestrator.domain.enums.PolicyType;
 import com.company.orchestrator.domain.model.PolicyEvaluationResult;
 import com.company.orchestrator.domain.model.TransferRequest;
+import com.company.orchestrator.infrastructure.persistence.entity.PolicyEntity;
+import com.company.orchestrator.infrastructure.persistence.repository.PolicyRepository;
 import com.company.orchestrator.infrastructure.policy.interfaces.PolicyEvaluator;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -10,6 +13,7 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 /**
@@ -22,21 +26,31 @@ import java.util.stream.Collectors;
 public class PolicyEvaluationService {
 
     private final List<PolicyEvaluator> policyEvaluators;
+    /**
+     * Optional repository for dynamic policy definitions stored in DB.
+     * In unit tests that construct PolicyEvaluationService directly, this
+     * may be null; in that case we fall back to evaluating all evaluators.
+     */
+    private final Optional<PolicyRepository> policyRepository;
 
     /**
-     * Evaluates all policies for a transfer request
-     * Policies are composed with AND logic - all must pass
+     * Evaluates all active policies for a transfer request.
+     * If a PolicyRepository is present, only policies that are marked active
+     * in the database are evaluated; otherwise, all PolicyEvaluators are used
+     * (preserving previous in-memory behavior for tests).
      */
     public PolicyEvaluationResult evaluateAll(TransferRequest request) {
         log.info("Evaluating policies for transfer request. Consumer: {}, Asset: {}",
             request.getConsumerId(), request.getAssetId());
 
+        // Resolve which evaluators to run based on active DB policies when repository is available
+        List<PolicyEvaluator> evaluatorsToRun = resolveEvaluatorsToRun();
+
         List<String> allViolated = new ArrayList<>();
         List<String> allSatisfied = new ArrayList<>();
         boolean allPassed = true;
 
-        // Evaluate each policy
-        for (PolicyEvaluator evaluator : policyEvaluators) {
+        for (PolicyEvaluator evaluator : evaluatorsToRun) {
             try {
                 PolicyEvaluationResult result = evaluator.evaluate(request);
 
@@ -73,7 +87,9 @@ public class PolicyEvaluationService {
     }
 
     /**
-     * Evaluates specific policies by type
+     * Evaluates specific policies by type. The passed-in policyTypes are
+     * matched against available evaluators; when a PolicyRepository is present
+     * only those that are also active in DB are considered.
      */
     public PolicyEvaluationResult evaluateSpecific(TransferRequest request, List<String> policyTypes) {
         log.info("Evaluating specific policies: {}", policyTypes);
@@ -81,11 +97,25 @@ public class PolicyEvaluationService {
         Map<String, PolicyEvaluator> evaluatorMap = policyEvaluators.stream()
             .collect(Collectors.toMap(PolicyEvaluator::getPolicyType, e -> e));
 
+        // If repository is present, filter the requested policy types by active DB policies
+        List<String> effectivePolicyTypes = policyRepository
+            .map(repo -> {
+                List<PolicyEntity> active = repo.findByActiveTrue();
+                List<String> activeTypes = active.stream()
+                    .map(pe -> pe.getType().name())
+                    .distinct()
+                    .toList();
+                return policyTypes.stream()
+                    .filter(activeTypes::contains)
+                    .toList();
+            })
+            .orElse(policyTypes);
+
         List<String> allViolated = new ArrayList<>();
         List<String> allSatisfied = new ArrayList<>();
         boolean allPassed = true;
 
-        for (String policyType : policyTypes) {
+        for (String policyType : effectivePolicyTypes) {
             PolicyEvaluator evaluator = evaluatorMap.get(policyType);
 
             if (evaluator == null) {
@@ -121,12 +151,54 @@ public class PolicyEvaluationService {
     }
 
     /**
-     * Lists all available policy types
+     * Lists all available policy types. When a PolicyRepository is present,
+     * this is driven by active policies in the database; otherwise it falls
+     * back to the types exposed by the configured evaluators.
      */
     public List<String> getAvailablePolicyTypes() {
-        return policyEvaluators.stream()
-            .map(PolicyEvaluator::getPolicyType)
-            .collect(Collectors.toList());
+        return policyRepository
+            .map(repo -> repo.findByActiveTrue().stream()
+                .map(PolicyEntity::getType)
+                .map(PolicyType::name)
+                .distinct()
+                .toList())
+            .orElseGet(() -> policyEvaluators.stream()
+                .map(PolicyEvaluator::getPolicyType)
+                .collect(Collectors.toList()));
+    }
+
+    /**
+     * Helper to resolve which evaluators should run for evaluateAll().
+     * If a PolicyRepository is present, only evaluators whose type is present
+     * as an active PolicyEntity.type are returned; otherwise returns
+     * the full list of evaluators.
+     */
+    private List<PolicyEvaluator> resolveEvaluatorsToRun() {
+        if (policyRepository.isEmpty()) {
+            return policyEvaluators;
+        }
+
+        List<PolicyEntity> activePolicies = policyRepository.get().findByActiveTrue();
+        if (activePolicies.isEmpty()) {
+            log.warn("No active policies found in database; no policies will be evaluated");
+            return List.of();
+        }
+
+        Map<String, PolicyEvaluator> evaluatorMap = policyEvaluators.stream()
+            .collect(Collectors.toMap(PolicyEvaluator::getPolicyType, e -> e));
+
+        return activePolicies.stream()
+            .map(PolicyEntity::getType)
+            .map(PolicyType::name)
+            .distinct()
+            .map(evaluatorMap::get)
+            .filter(e -> {
+                if (e == null) {
+                    log.warn("Active policy has no matching evaluator configured");
+                    return false;
+                }
+                return true;
+            })
+            .toList();
     }
 }
-
